# navi-pbjrag

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_SUMMARY.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  INSTALL.md  LICENSE  MANIFEST.in  NOTICE  README-WEBUI.md  README.md  RELEASE_CHECKLIST.md  SECURITY_VERIFICATION.txt  dependencies.yaml  docker-compose.yml  pyproject.toml  pytest.ini  quickstart.sh  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.cfg  slo.yaml  tox.ini
.fcpa_audit/: FCPA_LLM_REPORT.md  change_requests_20251205_063712.json  change_requests_20251205_070112.json  fcpa_manifest_20251205_063712.json  fcpa_manifest_20251205_070112.json  fcpa_summary_20251205_063712.md  fcpa_summary_20251205_070112.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker.yml  release.yml
config/: README.md  default.yaml
docs/: 9-dimensions.md  ARCHITECTURE.md  DEPLOYMENT.md  FCPA_FIX_PLAN.md  api.md  dsc-dimension-implementations.md  observability-guide.md  release-management.md  semantic-chunking-analysis.md  test_coverage_report_metrics.md  type-hint-improvements.md  webui-spec.md
docs/adapters/: CUSTOM_ADAPTER_TEMPLATE.md  VECTOR_STORE_ARCHITECTURE.md
docs/legal/: ATTRIBUTION_GUIDE.md  DPA_v1.0.md  ETHICAL_SUPPORT_FRAMEWORK.md  LICENSE_README.md  NOTICE_TEMPLATE.md  PNEUL-C_v2.2.md  PNEUL-D_v2.2.md  dsc_dual_license.txt  dsc_governance_framework.txt
dsc_analysis/: helper_analysis.json  main_analysis.json  sample_analysis.json  utils_analysis.json
dsc_analysis/test_project/: compost_20251205_010003.json  compost_20251205_011223.json  compost_20251205_011256.json  dsc_project_analysis.json  field_summary_20251205_010003.json  field_summary_20251205_011223.json  field_summary_20251205_011256.json  final_report.json  final_report.md  fragments.json  fragments_20251205_010003.json  fragments_20251205_011223.json  fragments_20251205_011256.json  patterns.json  solution.json
examples/: README.md
examples/sample_project/: calculator.py  main.py  utils.py
scripts/: deploy.sh  rollback.sh
src/pbjrag/: __init__.py  cli.py  config.py  metrics.py  observability.py
src/pbjrag/crown_jewel/: __init__.py  error_handler.py  field_container.py  metrics.py  orchestrator.py  pattern_analyzer.py  phase_manager.py
src/pbjrag/dsc/: __init__.py  analyzer.py  chroma_store.py  chunker.py  embedding_adapter.py  neo4j_store.py  vector_store.py
src/pbjrag/dsc/legacy/: __init__.py  chroma_store.py
tests/: README.md  TEST_SUITE_SUMMARY.md  conftest.py  test_analyzer.py  test_chunker.py  test_cli.py  test_config.py  test_config_standalone.py  test_dimension_comparison.py  test_dsc_dimensions.py  test_embedding_adapter.py  test_error_handler.py  test_field_container_extended.py  test_integration.py  test_metrics.py  test_metrics_extended.py  test_neo4j_store.py  test_observability.py  test_optional_deps.py  test_performance_slo.py  test_phase_manager.py  test_vector_store.py
tests/legacy/: test_chroma_store.py  test_chroma_store_extended.py
webui/: .gitignore  DELIVERY.md  IMPLEMENTATION.md  README.md  USAGE.md  app.py  run.sh  verify.sh
webui/components/: __init__.py  charts.py  chunk_viewer.py
webui/pages/: 1_analyze.py  2_explore.py  3_search.py
