[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "navi-pbjrag"
version = "3.0.0"
description = "Presence-Based Jurisdictional RAG: 9-dimensional code analysis using Differential Symbolic Calculus"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "ndspence", email = "ndspence@users.noreply.github.com" }
]
keywords = [
    "code-analysis",
    "rag",
    "differential-symbolic-calculus",
    "code-quality",
    "semantic-analysis",
    "ai",
    "llm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
qdrant = ["qdrant-client>=1.7.0"]
chroma = ["chromadb>=0.4.0"]
neo4j = ["neo4j>=5.0.0"]
all = [
    "qdrant-client>=1.7.0",
    "chromadb>=0.4.0",
    "neo4j>=5.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/Project-Navi/navi-pbjrag"
Documentation = "https://github.com/Project-Navi/navi-pbjrag#readme"
Repository = "https://github.com/Project-Navi/navi-pbjrag"
Issues = "https://github.com/Project-Navi/navi-pbjrag/issues"

[project.scripts]
pbjrag = "pbjrag.cli:main"

[tool.hatch.build.targets.sdist]
include = [
    "/src/pbjrag",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pbjrag"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=pbjrag --cov-report=term-missing"

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
