[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "navi-pbjrag"
version = "3.0.0"
description = "Presence-Based Jurisdictional RAG: 9-dimensional code analysis using Differential Symbolic Calculus"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "ndspence", email = "ndspence@users.noreply.github.com" }
]
keywords = [
    "code-analysis",
    "rag",
    "differential-symbolic-calculus",
    "code-quality",
    "semantic-analysis",
    "ai",
    "llm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
qdrant = ["qdrant-client>=1.7.0"]
chroma = ["chromadb>=0.4.0"]
neo4j = ["neo4j>=5.0.0"]
all = [
    "qdrant-client>=1.7.0",
    "chromadb>=0.4.0",
    "neo4j>=5.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/Project-Navi/navi-pbjrag"
Documentation = "https://github.com/Project-Navi/navi-pbjrag#readme"
Repository = "https://github.com/Project-Navi/navi-pbjrag"
Issues = "https://github.com/Project-Navi/navi-pbjrag/issues"

[project.scripts]
pbjrag = "pbjrag.cli:main"

[tool.hatch.build.targets.sdist]
include = [
    "/src/pbjrag",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pbjrag"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=pbjrag --cov-report=term-missing"

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.ruff_cache
  | \.pytest_cache
  | \.venv
  | venv
  | build
  | dist
  | htmlcov
)/
'''

[tool.ruff]
line-length = 88
target-version = "py310"
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "T10",  # flake8-debugger
    "ISC",  # flake8-implicit-str-concat
    "ICN",  # flake8-import-conventions
    "PIE",  # flake8-pie
    "PYI",  # flake8-pyi
    "Q",    # flake8-quotes
    "RSE",  # flake8-raise
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "TCH",  # flake8-type-checking
    "PTH",  # flake8-use-pathlib
]
ignore = [
    "E501",   # Line too long (handled by black)
    "B008",   # Function call in argument defaults
    "B904",   # raise-without-from-inside-except
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"tests/**/*.py" = ["S101", "PLR2004"]

[tool.ruff.isort]
known-first-party = ["pbjrag"]
force-sort-within-sections = true

[tool.ruff.mccabe]
max-complexity = 10

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
ignore_missing_imports = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
