[metadata]
name = navi-pbjrag
version = 3.0.0
author = ndspence
author_email = ndspence@users.noreply.github.com
description = Presence-Based Jurisdictional RAG: 9-dimensional code analysis using Differential Symbolic Calculus
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Project-Navi/navi-pbjrag
project_urls =
    Documentation = https://github.com/Project-Navi/navi-pbjrag#readme
    Source = https://github.com/Project-Navi/navi-pbjrag
    Tracker = https://github.com/Project-Navi/navi-pbjrag/issues
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Typing :: Typed
keywords =
    code-analysis
    rag
    differential-symbolic-calculus
    code-quality
    semantic-analysis
    ai
    llm
    vector-database
    knowledge-graph

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    numpy>=1.24.0
    requests>=2.28.0
zip_safe = False
include_package_data = True

[options.packages.find]
where = src
exclude =
    tests*
    docs*
    examples*

[options.extras_require]
# Vector store backends
qdrant =
    qdrant-client>=1.7.0
chroma =
    chromadb>=0.4.0
neo4j =
    neo4j>=5.0.0

# All optional dependencies
all =
    qdrant-client>=1.7.0
    chromadb>=0.4.0
    neo4j>=5.0.0

# Development dependencies
dev =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    pytest-asyncio>=0.21.0
    black>=23.0.0
    ruff>=0.1.0
    mypy>=1.0.0
    pre-commit>=3.0.0

# WebUI dependencies
webui =
    streamlit>=1.28.0
    plotly>=5.17.0
    pandas>=2.0.0

# Testing only
test =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    pytest-asyncio>=0.21.0

# Documentation
docs =
    sphinx>=7.0.0
    sphinx-rtd-theme>=1.3.0
    sphinx-autodoc-typehints>=1.24.0

[options.entry_points]
console_scripts =
    pbjrag = pbjrag.cli:main

[options.package_data]
pbjrag =
    py.typed
    *.json
    *.yaml
    *.yml

[bdist_wheel]
universal = 0

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts =
    -v
    --cov=pbjrag
    --cov-report=term-missing
    --cov-report=html
    --cov-report=xml
    --strict-markers
    --tb=short
markers =
    slow: marks tests as slow (deselect with '-m "not slow"')
    integration: marks tests as integration tests
    unit: marks tests as unit tests

[coverage:run]
source = src/pbjrag
omit =
    */tests/*
    */test_*.py
    */__pycache__/*
    */site-packages/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:
    if TYPE_CHECKING:
    @abstractmethod
    @abc.abstractmethod

[mypy]
python_version = 3.10
warn_return_any = True
warn_unused_configs = True
warn_redundant_casts = True
warn_unused_ignores = True
disallow_untyped_defs = False
disallow_incomplete_defs = False
check_untyped_defs = True
ignore_missing_imports = True
no_implicit_optional = True
strict_optional = True

[mypy-tests.*]
ignore_errors = True

[flake8]
max-line-length = 88
extend-ignore = E203, E266, E501, W503
exclude =
    .git,
    __pycache__,
    build,
    dist,
    .eggs,
    *.egg-info,
    .venv,
    venv,
    .tox,
    .pytest_cache,
    .mypy_cache
per-file-ignores =
    __init__.py:F401

[isort]
profile = black
line_length = 88
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True

[black]
line-length = 88
target-version = py310
include = \.pyi?$
